# Test_Mich

./: .gitmodules  CMakeLists.txt  README.md
Mich_Application/: CMakeLists.txt  main.cpp
Mich_Library/: CMakeLists.txt
Mich_Library/include/: calcul.h
Mich_Library/lib/: libjsoncpp.so.1.9.4
Mich_Library/src/: calcul.cpp
Mich_UnitTest/: CMakeLists.txt
Mich_UnitTest/include/: michelinTestUnit_TestClass.h
Mich_UnitTest/src/: michelinTestUnit.cpp
Michelin_Application/: CMakeLists.txt
Michelin_Library/src/: calcul.cpp
Michelin_UnitTest/: CMakeLists.txt  graphTest.json
Michelin_UnitTest/src/: michelinTestUnit.cpp  michelinTestUnit_TestClass.cpp
